/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.monitoring;

option java_package = "com.google.devtools.mobileharness.infra.monitoring.proto";
option java_outer_classname = "MonitorEntryProto";

message MonitorEntry {
  HostData host_data = 1;
  repeated DeviceData device_data = 2;
}

message HostData {
  string host_name = 1;
  string host_ip = 2;
}

message DeviceData {
  string id = 1;
  string status = 2;
  string model = 3;
  string version = 4;
  string hardware = 5;
  string build_type = 6;
}
